# thumbnail-generator-ubuntu

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  scripts.py
tests/: test_thumbgen.py  test_thumbnail_generator_ubuntu.py
thumbgen/: thumbgen.py
thumbnail_generator_ubuntu/: thumbgen.py
