[tool.poetry]
name = "thumbnail_generator_ubuntu"
version = "0.1.0"
description = ""
authors = ["Mudassir Khan <mudassirkhan19@gmail.com>"]

[tool.black]
line-length = 120
target-version = ['py37']

[tool.poetry.dependencies]
python = "^3.7"
PyGObject = "^3.34"
click = "^7.0"
loguru = "^0.3.2"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
jupyter = "^1.0"

[tool.poetry.scripts]
thumbgen = "thumbnail_generator_ubuntu.thumbgen:main"
fix = "scripts:fix"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
