[tool.poetry]
name = "thumbgen"
version = "0.1.1"
description = "Pre-generates thumbnails for 'Gnome Files' formerly known as nautilus."
authors = ["Mudassir Khan <mudassirkhan19@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/difference-engine/thumbnail-generator-ubuntu"
repository = "https://github.com/difference-engine/thumbnail-generator-ubuntu"
keywords = ["nautilus", "thumbnail"]

[tool.black]
line-length = 120
target-version = ['py35', 'py36', 'py37']

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = True
envlist = py35, py36, py37
isolated_build = true
[tox:.package]
basepython = python3
[testenv]
whitelist_externals = poetry
skip_install = true
commands =
    poetry install -v
    poetry run pytest tests/
"""

[tool.poetry.dependencies]
python = "^3.5"
PyGObject = "^3.34"
click = "^7.0"
loguru = "^0.3.2"
tqdm = "^4.36"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "^19.3b0", python = "^3.6" }
jupyter = "^1.0"
tox = "^3.14"
flake8 = "^3.7"
isort = "^4.3"

[tool.poetry.scripts]
thumbgen = "thumbgen.thumbgen:main"
fix = "scripts:fix"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
